--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <meta property="og:type" content="website" />
     <meta property="og:title" content="DevStudio | Raphael Yankous" />
     <meta property="og:description" content="Transforme sua presença digital com sites ultra tecnológicos e alta performance." />
-    <meta property="og:image" content="/logo.jpg" />
+    <meta property="og:image" content="/public/ac15dae3e1ebe1a151b26de806db9999.png" />
     <meta property="og:url" content="https://seu-site.vercel.app/" />
     
     <link rel="preconnect" href="https://fonts.googleapis.com">
